update about text

--- a/src/css/slideshow.module.css
+++ b/src/css/slideshow.module.css
@@ -26,5 +26,5 @@
 }
 
 .bubble {
-  @apply bg-gray-200  rounded-full m-2 md:m-5 flex items-center justify-center border shadow-lg text-sm md:text-base lg:text-lg  col-span-3 md:col-span-4 hover:ring-1 ring-offset-4 ring-cyan-500 transition text-center px-3 md:px-8;
+  @apply bg-gray-200  rounded-full m-2 md:m-5 flex items-center justify-center border shadow-lg text-sm md:text-base lg:text-xl  col-span-3 md:col-span-4 hover:ring-1 ring-offset-4 ring-cyan-500 transition text-center px-3 md:px-8;
 }
