--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,10 @@ a.animate-underline-right {
   background-position: right bottom;
 }
 
+.flex-center {
+  @apply flex items-center justify-center;
+}
+
 .focus-ring:hover,
 .focus-ring:focus {
   @apply ring-2 ring-offset-4 ring-black dark:ring-white dark:ring-offset-gray-900 shadow-lg shadow-black/30 dark:shadow-white/50;
